version/0.17/_sources/api/solver/_autosummary/settings/register_based.rst.txt
:orphan:

.. _register_based:

register_based
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.register_based.register_based
    :show-inheritance:

.. rubric:: Methods

==========================================   ===============================================================

Method                                                                                               Summary

==========================================   ===============================================================
:ref:`list <list_2>`                               List the names of the definitions for poor mesh numerics.

:ref:`list_properties <list_properties_5>`       List the properties of a definition for poor mesh numerics.

:ref:`duplicate <duplicate>`                                                            'duplicate' command.

:ref:`set <set_1>`                                                                            'set' command.

==========================================   ===============================================================

.. rubric:: Named object type

:ref:`register_based_child <register_based_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`poor_mesh_numerics <poor_mesh_numerics>`       'poor_mesh_numerics' child.

==============================================   ===============================

